app/assets/stylesheets/_layers.scss
@import "variables";

.layer-qct {
  background-color: #0D465C;
}
.layer-qct_e {
  background-color: #0D465C;
}
.layer-qct_brac {
  background-color: #ffffff;
  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 20 20'><g fill='none' fill-opacity='1' fill-rule='evenodd'><rect width='16' height='16' fill='%23ffffff'/><circle cx='8' cy='8' r='5' fill='%230D465C'/></g></svg>");
}
.layer-qct_r {
  background-color: #ffffff;
  background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%230D465C' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
}
.layer-qnmc {
  background-color: #BA233F;
}
.layer-qnmc_a {
  background-color: #BA233F;
}
.layer-qnmc_ab {
  background-color: #BA233F;
}
.layer-qnmc_b {
  background-color: #BA233F;
}
.layer-qnmc_c {
  background-color: #BA233F;
}
.layer-qnmc_dda {
  background-color: #BA233F;
}
.layer-qnmc_e {
  background-color: #BA233F;
}
.layer-qnmc_r {
  background-color: #ffffff;
  background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23BA233F' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
}
.layer-qnmc_brac {
  background-color: #ffffff;
  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 20 20'><g fill='none' fill-opacity='1' fill-rule='evenodd'><rect width='16' height='16' fill='%23ffffff'/><circle cx='8' cy='8' r='5' fill='%23BA233F'/></g></svg>");
}
.layer-indian_lands {
  background-color: #009DCD;
}
.layer-brac {
  background-color: #ffffff;
  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 20 20'><g fill='none' fill-opacity='1' fill-rule='evenodd'><rect width='16' height='16' fill='%23ffffff'/><circle cx='8' cy='8' r='5' fill='%23000'/></g></svg>");
}
.layer-qct_qda {
  background-color: #ffffff;
  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='20'><path fill='none' stroke-width='16' stroke='%230D465C' d='M0,1 L50,1' stroke-linecap='square'/></svg>");
}
.layer-qnmc_qda {
  background-color: #ffffff;
  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='20'><path fill='none' stroke-width='16' stroke='%23BA233F' d='M0,1 L50,1' stroke-linecap='square'/></svg>");
}

